<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/noble"
    tools:context=".MainActivity4">

    <Button
        android:id="@+id/button4"
        android:layout_width="155dp"
        android:layout_height="61dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="82dp"
        android:backgroundTint="@color/btn"
        android:text="@string/getStarted"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="168dp"
        android:layout_height="157dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/untitled_design"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="HardcodedText,MissingConstraints,SpUsage" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginBottom="60dp"
        android:text="@string/NobleSwotting"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="HardcodedText,MissingConstraints,SpUsage" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="221dp"
        android:layout_height="43dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/begin"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="HardcodedText,MissingConstraints,SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>