<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/noble"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/btn"
        android:text="@string/bttn1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="HardcodedText,MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/onBoardP2"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="HardcodedText,MissingConstraints,SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="360dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/onBoardP2a"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="HardcodedText,MissingConstraints,SpUsage,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="391dp"
        android:layout_height="366dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_4c7a00eee17944c5cf31b7b_618b700f8ba42f122c445fa6_shutterstock_1153395307"
        tools:ignore="ContentDescription,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>